fix bug in sessioninfo and fix name styling maxlength cutting off behavior

--- a/src/css/sessioninfo.css
+++ b/src/css/sessioninfo.css
@@ -8,7 +8,6 @@
     top: 50px;
     overflow: hidden;
     border-radius: var(--menubarBorderRadius);
-    max-width: 150px;
     max-height: 200px;
     pointer-events: none;
     display: grid;
@@ -17,6 +16,7 @@
 }
 
 .user-info {
+    max-width: 300px;
     background: #00000066;
     width: fit-content;
     height: 18px;
